<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lakshminarayanabr.expensemanager.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_AddExpense"
            android:id="@+id/buttonAddExpense"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_EditExpense"
            android:id="@+id/buttonEditExpense"
            android:layout_marginTop="20dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_DeleteExpense"
            android:id="@+id/buttonDeleteExpense"
            android:layout_marginTop="20dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_ShowExpenses"
            android:id="@+id/buttonShowExpenses"
            android:layout_marginTop="20dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_Finish"
            android:id="@+id/buttonFinish"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</RelativeLayout>
