<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lakshminarayanabr.expensemanager.AddExpenseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_AddExpenseHeading"
        android:id="@+id/textViewHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ExpenseName"
        android:layout_marginTop="10dp"
        android:id="@+id/textViewExpenseID"
        android:layout_below="@+id/textViewHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextExpenseName"
        android:layout_below="@+id/textViewExpenseID"
        android:layout_marginTop="10dp"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxLength="50"
        android:inputType="text"
        android:hint="@string/string_ExpenseName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Category"
        android:id="@+id/textViewCategory"
        android:layout_below="@+id/editTextExpenseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCategory"
        android:layout_below="@+id/textViewCategory"
        android:layout_marginTop="10dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/string_CategoryPrompt"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Amount"
        android:id="@+id/textViewAmount"
        android:layout_below="@+id/spinnerCategory"
        android:layout_marginTop="10dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAmount"
        android:layout_below="@+id/textViewAmount"
        android:layout_marginTop="10dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Date"
        android:id="@+id/textViewDate"
        android:layout_marginTop="10dp"

        android:layout_below="@+id/editTextAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAEDate"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/textViewDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="date" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/imageViewCalendar"
        android:layout_alignTop="@+id/textViewDate"
        android:layout_toRightOf="@+id/editTextAEDate"
        android:layout_toEndOf="@+id/editTextAEDate"
        android:src="@drawable/appscalendarmetro"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Receipt"
        android:id="@+id/textViewRecipt"
        android:layout_below="@+id/editTextAEDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageViewReceipt"
        android:layout_below="@+id/textViewRecipt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/plainiconcom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_AddExpense"
        android:id="@+id/buttonAddExpense"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
