<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lakshminarayanabr.expensemanager.ShowExpenseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ShowExpenseHeader"
        android:id="@+id/textViewShowExpenseHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Name"
        android:id="@+id/textViewName"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewShowExpenseHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textNameValue"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewShowExpenseHeader"
        android:layout_toRightOf="@+id/textViewName"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Category"
        android:id="@+id/textViewCategory"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCategoryValue"
        android:layout_below="@+id/textNameValue"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textViewCategory"
        android:layout_toEndOf="@+id/textViewCategory"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Amount"
        android:id="@+id/textViewAmount"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAmountValue"
        android:layout_below="@+id/textViewCategoryValue"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textViewAmount"
        android:layout_toEndOf="@+id/textViewAmount"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Date"
        android:id="@+id/textViewDate"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDateValue"
        android:layout_below="@+id/textViewAmountValue"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textViewDate"
        android:layout_toEndOf="@+id/textViewDate"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Receipt"
        android:id="@+id/textViewReceipt"
        android:layout_below="@+id/textViewDateValue"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageViewReceipt"
        android:layout_below="@+id/textViewReceipt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/plainiconcom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Finish"
        android:id="@+id/buttonFinish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageViewPrev"
        android:layout_below="@id/imageViewReceipt"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/buttonFinish"
        android:layout_toStartOf="@+id/buttonFinish"
        android:layout_marginRight="20dp"

        android:src="@drawable/prevexp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageViewFirst"
        android:layout_below="@id/imageViewReceipt"
        android:layout_marginTop="30dp"

        android:layout_toLeftOf="@+id/imageViewPrev"
        android:layout_toStartOf="@+id/imageViewPrev"
        android:layout_marginRight="20dp"
        android:src="@drawable/firstexp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageViewNext"
        android:layout_below="@id/imageViewReceipt"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/buttonFinish"
        android:layout_toEndOf="@+id/buttonFinish"
        android:layout_marginLeft="20dp"

        android:src="@drawable/nextexp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageViewLast"
        android:layout_below="@id/imageViewReceipt"
        android:layout_marginTop="30dp"

        android:layout_toRightOf="@+id/imageViewNext"
        android:layout_toEndOf="@+id/imageViewNext"
        android:layout_marginLeft="20dp"
        android:src="@drawable/lastexp"/>

</RelativeLayout>
